--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "compression": "^1.8.1",
     "dotenv": "^16.5.0",
     "firebase-admin": "^13.4.0",
     "handlebars": "^4.7.8",
     "handlebars-helpers": "^0.10.0",
+    "helmet": "^8.1.0",
     "nodemailer": "^7.0.3",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
